# voindns-desktop

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  e2e.yml  installers.yml  tier2.yml
ci/: fedora-build-rpm.sh  fedora-e2e.sh
crates/gui/: .gitignore  README.md  index.html  package-lock.json  package.json  run.sh  tsconfig.json  vite.config.ts
crates/gui/scripts/: stage-bins.mjs  stage-sidecars.mjs
crates/gui/src/: App.svelte  app.css
crates/gui/src-tauri/: Cargo.toml  tauri.conf.json
crates/gui/src-tauri/binaries/: .gitignore
crates/gui/src-tauri/capabilities/: default.json
crates/gui/src-tauri/icons/: icon.icns
crates/gui/src-tauri/packaging/: voidns.service
crates/gui/src-tauri/packaging/rpm/: postinstall.sh  postremove.sh  preremove.sh
crates/gui/src-tauri/packaging/windows/: hooks.nsh
crates/gui/src-tauri/src/: ipc.rs  lib.rs  main.rs
crates/gui/src/lib/: backend.ts
crates/voidns-cli/: Cargo.toml
crates/voidns-cli/src/: main.rs
crates/voidns-core/: Cargo.toml
crates/voidns-core/src/: controller.rs  ipc.rs  lib.rs  proxy.rs
crates/voidns-core/src/redirect/: linux.rs  macos.rs  mod.rs  parse.rs  windows.rs
crates/voidns-core/tests/: doh_local.rs  ipc_roundtrip.rs  proxy_doh.rs
crates/voidns-core/tests/doh-mock/: mock-doh.mjs  package-lock.json  package.json
crates/voidns-core/tests/e2e/: run-e2e.ts
crates/voidns-proto/: Cargo.toml
crates/voidns-proto/src/: lib.rs
crates/voidns-service/: Cargo.toml
crates/voidns-service/src/: main.rs  winservice.rs
crates/voindns-core/: Cargo.toml
crates/voindns-core/src/: controller.rs  ipc.rs  lib.rs  proxy.rs
crates/voindns-core/src/redirect/: linux.rs  macos.rs  mod.rs  windows.rs
crates/voindns-core/tests/: ipc_roundtrip.rs  proxy_doh.rs
crates/voindns-proto/: Cargo.toml
crates/voindns-proto/src/: lib.rs
crates/voindns-service/: Cargo.toml
crates/voindns-service/src/: main.rs
e2e/: README.md  package-lock.json  package.json  tsconfig.json
e2e/src/: certs.ts  dns-probe.ts  exec.ts  install.ts  mock-doh.ts  platform.ts  run.ts
gui/: package-lock.json  package.json  svelte.config.js  vite.config.ts
gui/src/: app.css  app.html
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/src/: lib.rs  main.rs
gui/src/lib/: ConnectButton.svelte  ipc.ts
gui/src/routes/: +layout.ts  +page.svelte
installers/linux/: install-dev.sh  postinst.sh  uninstall-dev.sh  voidns.service  voindns.service
installers/macos/: net.voidns.proxy.plist  net.voindns.proxy.plist  postinstall.sh
installers/windows/: install-service.nsh  install-service.ps1
