[package]
name = "voidns-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
voidns-proto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures-util = { workspace = true }
interprocess = { workspace = true }
bytes = { workspace = true }

hickory-server = { version = "0.26", default-features = false, features = ["resolver", "https-ring"] }
hickory-resolver = { version = "0.26", default-features = false, features = ["https-ring", "tokio", "webpki-roots"] }

# Upstream DoH TLS uses an explicit, *offline* rustls trust store (webpki-roots,
# the Mozilla bundle) instead of the OS verifier (rustls-platform-verifier).
# This is deliberate: when we redirect the system DNS to our own proxy, the
# Windows OS cert verifier's own lookups (CRL/CTL/connectivity probes to
# crl.microsoft.com etc.) would recurse back through the proxy that is *mid*
# handshake — a bootstrap deadlock that ServFails every upstream connection.
# An offline verifier never touches the network. We build the ClientConfig
# ourselves (see proxy.rs) so we can also add a private CA via
# VOIDNS_EXTRA_CA_FILE — used by the CI e2e to trust its mock DoH server, and
# usable for enterprise split-DNS with an internal DoH endpoint.
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
webpki-roots = "1"
rustls-pemfile = "2"
async-trait = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
# systemd-resolved control over D-Bus (org.freedesktop.resolve1), blocking API.
zbus = { version = "5", default-features = false, features = ["tokio", "blocking-api"] }
nix = { version = "0.29", features = ["socket", "user", "fs", "net"] }

# Windows: native SetInterfaceDnsSettings (IP Helper) — netsh kept as fallback.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
] }

# macOS: native SCDynamicStore — networksetup kept as fallback.
# core-foundation pinned to 0.9 so its CFPropertyList type matches the one
# system-configuration 0.7 uses (it depends on core-foundation 0.9); mixing 0.10
# here produces an E0308 `CFPropertyList` type mismatch in redirect/macos.rs.
[target.'cfg(target_os = "macos")'.dependencies]
system-configuration = "0.7"
core-foundation = "0.9"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "process"] }
# Hermetic DoH test (doh_local.rs) generates a self-signed cert for its in-proc
# mock. ring backend (not the default aws_lc_rs) to match the proxy's ring
# crypto provider and keep the C toolchain out of the tree. rustls +
# hickory-resolver are normal deps now, so the test reaches them directly.
rcgen = { version = "0.13", default-features = false, features = ["pem", "ring"] }
