[package]
name = "voindns-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
voindns-proto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures-util = { workspace = true }
interprocess = { workspace = true }
bytes = { workspace = true }

hickory-server = { version = "0.26", default-features = false, features = ["resolver", "https-ring"] }
hickory-resolver = { version = "0.26", default-features = false, features = ["https-ring", "tokio", "webpki-roots"] }

[target.'cfg(target_os = "linux")'.dependencies]
# systemd-resolved control over D-Bus (org.freedesktop.resolve1), blocking API.
zbus = { version = "5", default-features = false, features = ["tokio", "blocking-api"] }
nix = { version = "0.29", features = ["socket", "user", "fs", "net"] }

# Windows & macOS redirectors shell out to netsh / networksetup (Amnezia's
# documented fallback path). The native windows-rs SetInterfaceDnsSettings and
# SCDynamicStore implementations are a tracked follow-up (see plan §6).

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
