[package]
name = "voindns-service"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "voindns-service"
path = "src/main.rs"

[dependencies]
voindns-proto = { workspace = true }
voindns-core = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
sd-notify = "0.4"

[target.'cfg(windows)'.dependencies]
windows-service = "0.8"
