[package]
name = "voindns-gui"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[lib]
name = "voindns_gui_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["time"] }
tracing = "0.1"

voindns-proto = { path = "../../crates/voindns-proto" }
# Links the IPC client half of the engine. (Splitting an `ipc-client` crate to
# avoid pulling hickory/zbus into the GUI is a tracked follow-up.)
voindns-core = { path = "../../crates/voindns-core" }
